package seedu.address.model.person;

import static seedu.address.commons.util.CollectionUtil.requireAllNonNull;

import java.util.Collections;
import java.util.HashSet;
import java.util.Objects;
import java.util.Set;

import seedu.address.commons.util.ToStringBuilder;
import seedu.address.model.medicine.Medicine;
import seedu.address.model.tag.Tag;
import seedu.address.model.visit.DayList;

/**
 * Represents a Person in the address book.
 * Guarantees: details are present and not null, field values are validated, immutable.
 */
public class Person {

    // Identity fields
    private final Name name;
    private final Phone phone;
    private final Email email;

    // Data fields
    private final Address address;
    private final Doctor doctor;
    private final Set<Tag> tags = new HashSet<>();
    private final Set<Medicine> medicines = new HashSet<>();
    private final DayList dayList;

    /**
     * Every field must be present and not null.
     */
    public Person(Name name, Phone phone, Email email,
                  Address address, Doctor doctor, Set<Tag> tags, Set<Medicine> medicines, DayList dayList) {
        requireAllNonNull(name, phone, email, address, tags, medicines, dayList);
        this.name = name;
        this.phone = phone;
        this.email = email;
        this.address = address;
        this.doctor = doctor;
        this.tags.addAll(tags);
        this.medicines.addAll(medicines);
        this.dayList = dayList;
    }

    public Name getName() {
        return name;
    }

    public Phone getPhone() {
        return phone;
    }

    public Email getEmail() {
        return email;
    }

    public Address getAddress() {
        return address;
    }

    public Doctor getDoctor() {
        return doctor;
    }

    /**
     * Returns an immutable tag set, which throws {@code UnsupportedOperationException}
     * if modification is attempted.
     */
    public Set<Tag> getTags() {
        return Collections.unmodifiableSet(tags);
    }

    /**
     * Returns an immutable medicine set, which throws {@code UnsupportedOperationException}
     * if modification is attempted.
     */
    public Set<Medicine> getMedicines() {
        return Collections.unmodifiableSet(medicines);
    }

    /**
     * Returns the DayList containing visit dates.
     */
    public DayList getDayList() {
        return dayList;
    }

    /**
     * Returns true if both persons have the same name.
     * This defines a weaker notion of equality between two persons.
     */
    public boolean isSamePerson(Person otherPerson) {
        if (otherPerson == this) {
            return true;
        }

        return otherPerson != null
                && otherPerson.getName().equals(getName());
    }

    /**
     * Returns true if both persons have the same identity and data fields.
     * This defines a stronger notion of equality between two persons.
     */
    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        // instanceof handles nulls
        if (!(other instanceof Person)) {
            return false;
        }

        Person otherPerson = (Person) other;
        return name.equals(otherPerson.name)
                && phone.equals(otherPerson.phone)
                && email.equals(otherPerson.email)
                && address.equals(otherPerson.address)
                && doctor.equals(otherPerson.doctor)
                && tags.equals(otherPerson.tags)
                && medicines.equals(otherPerson.medicines)
                && dayList.equals(otherPerson.dayList);
    }

    @Override
    public int hashCode() {
        // use this method for custom fields hashing instead of implementing your own
        return Objects.hash(name, phone, email, address, tags, medicines, dayList);
    }

    @Override
    public String toString() {
        return new ToStringBuilder(this)
                .add("name", name)
                .add("phone", phone)
                .add("email", email)
                .add("address", address)
                .add("doctor", doctor)
                .add("tags", tags)
                .add("medicines", medicines)
                .add("dayList", dayList)
                .toString();
    }

}
